Added tests and fixed type relation check when implementing interface methods.